# mars_navigation

./: CMakeLists.txt  README.md  package.xml
action/: ExecuteMission.action  NavigateToTarget.action
include/mars_navigation/: mars_navigation_node.h
launch/: mars_navigation.launch
msg/: Waypoint.msg
scripts/: test_navigation.py
src/: main.cpp  mars_navigation_node.cpp
srv/: EmergencyStop.srv  NavigateToTarget.srv  UploadMission.srv
