<?xml version="1.0"?>
<package format="2">
  <name>mars_navigation</name>
  <version>1.0.0</version>
  <description>The mars_navigation package provides autonomous navigation capabilities for Mars rover</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build and run dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mars_canopen</depend>
  <depend>std_srvs</depend>

  <!-- Message generation -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- For pure pursuit algorithm -->
  <depend>angles</depend>

  <export>
  </export>
</package> 